[package]
name = "sasm"
version = "1.0.1"
authors = ["pitust <piotr@stelmaszek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
hex = "0.4.2"
log = "0.4.14"
pest = "2.1.3"
pest_derive = "2.1.0"
pretty_env_logger = "0.4.0"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_yaml = "0.8.17"